--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pythonista-webview"]
 	path = pythonista-webview
 	url = git@github.com:pome-ta/pythonista-webview.git
+[submodule "nesJSemu"]
+	path = nesJSemu
+	url = git@github.com:pome-ta/nesJSemu.git
